# newton-method

./: .gitignore  CMakeLists.txt  DataVector.cpp  DataVector.h  Equation.cpp  README.md  main.cpp
.github/workflows/: cmake.yml
configure/: config.txt
resources/: data_2021_12_21_time_15_05_44.txt  output.txt
src/: DataVector.cpp  DataVector.h  Equation.cpp  Equation.h  main.cpp
